[tool.poetry]
authors = ["Wojciech Bogócki <wojciechbogocki@fastmail.com>"]
description = ""
name = "Rep"
version = "0.1.0"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8" 
tinydb = "^4.2.0" 
typer = "^0.3.2" 
tabulate = "^0.8.7" 
wcwidth = "^0.2.5" # CJK support in tabulate
pydantic = "^1.7.1"
tinydb-serialization = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
rep = 'rep.main:main'

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
